Adding main api routes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^17.6.0"
+    "fawn": "^2.1.5",
+    "joi": "^17.6.0",
+    "joi-objectid": "^4.0.2",
+    "mongoose": "^6.2.10"
   }
 }
