--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for Video Rental Service",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test":"jest"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,10 @@
   },
   "homepage": "https://github.com/Steinium7/Rent-a-vid#readme",
   "devDependencies": {
+    "jest": "^28.1.3",
     "jshint": "^2.13.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.4"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
