--- a/package.json
+++ b/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "rent-a-vid",
-  "version": "1.0.0",
-  "description": "Backend for Video Rental Service",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test":"jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Steinium7/Rent-a-vid.git"
-  },
-  "keywords": [
-    "Rent",
-    "Video",
-    "Backend"
-  ],
-  "author": "Michael Asare Obeng",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Steinium7/Rent-a-vid/issues"
-  },
-  "homepage": "https://github.com/Steinium7/Rent-a-vid#readme",
-  "devDependencies": {
-    "jest": "^28.1.3",
-    "jshint": "^2.13.4",
-    "nodemon": "^2.0.15",
-    "supertest": "^6.2.4"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "config": "^3.3.7",
-    "express": "^4.17.1",
-    "express-async-errors": "^2.1.2",
-    "fawn": "^2.1.5",
-    "joi": "^17.6.0",
-    "joi-objectid": "^4.0.2",
-    "joi-password-complexity": "^5.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.2.10",
-    "winston": "^3.0.0"
-  }
+    "name": "rent-a-vid",
+    "version": "1.0.0",
+    "description": "Backend for Video Rental Service",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "test": "jest --watchAll"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Steinium7/Rent-a-vid.git"
+    },
+    "keywords": [
+        "Rent",
+        "Video",
+        "Backend"
+    ],
+    "author": "Michael Asare Obeng",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Steinium7/Rent-a-vid/issues"
+    },
+    "homepage": "https://github.com/Steinium7/Rent-a-vid#readme",
+    "devDependencies": {
+        "jest": "^28.1.3",
+        "jshint": "^2.13.4",
+        "nodemon": "^2.0.15",
+        "supertest": "^6.2.4"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "config": "^3.3.7",
+        "express": "^4.17.1",
+        "express-async-errors": "^2.1.2",
+        "fawn": "^2.1.5",
+        "joi": "^17.6.0",
+        "joi-objectid": "^4.0.2",
+        "joi-password-complexity": "^5.1.0",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.21",
+        "mongoose": "^6.2.10",
+        "winston": "^3.0.0"
+    }
 }
