--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+    
+
+env: 
+  app_password: ${{secrets.app_password}}
+  NODE_ENV: ${{secrets.NODE_ENV}}
 
 jobs:
   build:
