--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "start": "nodemon index.js",
         "test": "jest"
     },
+    "engines": {
+        "node": "14.17.2"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Steinium7/Rent-a-vid.git"
@@ -30,10 +33,11 @@
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "compression": "^1.7.4",
         "config": "^3.3.7",
         "express": "^4.17.1",
         "express-async-errors": "^2.1.2",
-        "fawn": "^2.1.5",
+        "helmet": "^5.1.1",
         "joi": "^17.6.0",
         "joi-objectid": "^4.0.2",
         "joi-password-complexity": "^5.1.0",
