--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,48 +4,46 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-    
+    push:
+        branches: ['main']
+    pull_request:
+        branches: ['main']
 
-env: 
-  app_password: ${{secrets.app_password}}
-  NODE_ENV: ${{secrets.NODE_ENV}}
+env:
+    app_password: ${{secrets.app_password}}
+    NODE_ENV: ${{secrets.NODE_ENV}}
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [14.x]
 
-    strategy:
-      matrix:
-        node-version: [14.x]
+        steps:
+            - uses: actions/checkout@v3
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: 'npm'
+            - name: Start Docker for Mongodb
+              run: docker run -d -p 27017:27017 mongo
+            - run: npm ci
+            - run: npm run test
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: Start Docker for Mongodb
-      run: docker run -d -p 27017:27017 mongo
-    - run: npm ci
-    - run: npm run test
-    
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "rent-a-vid" 
-          heroku_email: ${{secrets.EMAIL}}
-        env:
-          app_password: ${{secrets.app_password}}
-          NODE_ENV: 'production'
-          main_db: ${{secrets.MAIN_DB}}
+    deploy:
+        needs: build
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: akhileshns/heroku-deploy@v3.12.12
+              with:
+                  heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                  heroku_app_name: 'rent-a-vid-main-api-777'
+                  heroku_email: ${{secrets.EMAIL}}
+              env:
+                  app_password: ${{secrets.app_password}}
+                  NODE_ENV: 'production'
+                  main_db: ${{secrets.MAIN_DB}}
