--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Backend for Video Rental Service",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js",
+        "start": "node index.js",
         "test": "jest"
     },
     "engines": {
