--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
             - run: npm ci
             - run: npm run test
 
-    deploy:
+    deploy-heroku:
         needs: build
         runs-on: ubuntu-latest
         steps:
@@ -47,3 +47,18 @@ jobs:
                   HD_app_password: ${{secrets.app_password}}
                   HD_NODE_ENV: 'production'
                   HD_main_db: ${{secrets.MAIN_DB}}
+
+    deploy-docker:
+        needs: build
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v2
+              name: Checkout code for docker push
+            - uses: mr-smithers-excellent/docker-build-push@v5
+              name: Build & push Docker image
+              with:
+                  image: michaelakw7777777/rent-a-vid-app
+                  registry: docker.io
+                  username: ${{ secrets.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_PASSWORD }}
