--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "test": "jest"
+        "test": "jest --verbose"
     },
     "engines": {
         "node": "14.17.2"
